objects/LLC_BI__DocType__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>This field is optional and provides a space to describe the category.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__docManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not required, but an admin must populate it for the category to appear in classic Document Manager. This field associates a DocType (category) with a specific DocManager record.</description>
        <label>DocManager</label>
        <referenceTo>LLC_BI__DocManager__c</referenceTo>
        <relationshipLabel>DocTypes</relationshipLabel>
        <relationshipName>DocTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__docTab__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not required, but an admin must populate it for the category to appear under a tab in Classic DocMan. This field associates a DocType (category) with a specific DocTab record.</description>
        <label>DocTab</label>
        <referenceTo>LLC_BI__DocTab__c</referenceTo>
        <relationshipLabel>DocTypes</relationshipLabel>
        <relationshipName>DocTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is not currently used.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupId</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__sortOrder__c</fullName>
        <description>This field is optional and allows the user to define the order in which categories appear (from top to bottom) in classic Document Manager.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>sortOrder</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>DocType</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>DocType Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocTypes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>